# advent_of_code_2021

./: CMakeLists.txt  main.cpp
DailyTaskTemplate/: daily_task_XX.cpp  daily_task_XX.h
include/DailyTask/: DailyTask.h  daily_task_01.h  daily_task_02.h  daily_task_04.h  daily_task_05.h  daily_task_06.h  daily_task_07.h  daily_task_08.h  daily_task_09.h  daily_task_10.h  daily_task_11.h  daily_task_12.h  daily_task_13.h  daily_task_14.h  daily_task_15.h  daily_task_16.h  daily_task_17.h  daily_task_20.h  daily_task_21.h  daily_task_22.h
src/: daily_task_01.cpp  daily_task_02.cpp  daily_task_03.cpp  daily_task_04.cpp  daily_task_05.cpp  daily_task_06.cpp  daily_task_07.cpp  daily_task_08.cpp  daily_task_09.cpp  daily_task_10.cpp  daily_task_11.cpp  daily_task_12.cpp  daily_task_13.cpp  daily_task_14.cpp  daily_task_15.cpp  daily_task_16.cpp  daily_task_17.cpp  daily_task_20.cpp  daily_task_21.cpp  daily_task_22.cpp
